--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./dist/index.js",
-    "dev": "ts-node-dev --respawn --transpile-only ./src/index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only --inspect=4321 ./src/index.ts",
     "transpile": "tsc",
     "clean": "rimraf ./dist",
     "build": "npm-run-all -s clean transpile"
